# testCPP

./: .gitignore  main.cpp  main.out  readme.txt
first/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
four/: CMakeLists.txt
four/src/: main.cpp
helloworld.out.dSYM/Contents/Resources/DWARF/: helloworld.out
main.out.dSYM/Contents/Resources/DWARF/: main.out
second/: CMakeCache.txt  CMakeLists.txt  Makefile  add.h  cmake_install.cmake  main.cpp  second_cmake_demo
second/src/: CMakeLists.txt  CMakeLists.txt.bk  add.cpp  main.cpp
third/: CMakeLists.txt
third/include/: multiply.h
third/lib/: libthird.dylib
third/src/: multiply.cpp
